Fixed Nomenclature deep explosion
